--- a/app/globals.css
+++ b/app/globals.css
@@ -1,10 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=M+PLUS+1p&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Yusei+Magic&display=swap');
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 body {
-  font-family: Oswald, "M PLUS 1p", Arial, Helvetica, sans-serif;
+  font-family: Quicksand, "M PLUS 1p", Arial, Helvetica, sans-serif;
 }
