--- a/app/globals.css
+++ b/app/globals.css
@@ -7,5 +7,5 @@
 @tailwind utilities;
 
 body {
-  font-family: Quicksand, "M PLUS 1p", Arial, Helvetica, sans-serif;
+  font-family: Quicksand, 'M PLUS 1p', Arial, Helvetica, sans-serif;
 }
