--- a/app/globals.css
+++ b/app/globals.css
@@ -6,6 +6,12 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer components {
+  .ease-in-animation {
+    @apply animation-timeline-view opacity-0 animate-easeIn;
+  }
+}
+
 body {
   font-family: Quicksand, 'M PLUS 1p', Arial, Helvetica, sans-serif;
 }
